# AoC23

./: .flake8  .gitignore  Makefile  README.md  pyproject.toml  pytest.ini
day01/: solution1.py  solution2.py  test_solution1.py
utils/: generate.py  read.py
utils/template/: solution1.py  test_solution2.py
