[tool.poetry]
name = "AoC23"
version = "0.0.1"
description = "Just a bit of fun innit"
authors = ["SRE"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
bandit = "^1.7.0"
black = {version = "^21.7-beta0", allow-prereleases = true}
flake8 = "^3.9.2"
flake8-bugbear = "^21.4.3"
isort = "^5.9.3"
pytest = "^6.2.4"
pytest-pythonpath = "^0.7.3"
safety = "^1.10.3"

[tool.black]
line-length = 79
include = '\.py$'
exclude = '''
/(
    \.git
  | \.history
  | \.venv
)/
'''

[tool.isort]
profile = "black"
line_length = 79
src_paths = ["day*", "utils"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
